# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.508 2006/01/16 14:47:01 rocket Exp $

  16 Jan 2006; Eric Edgar <rocket@gentoo.org> targets/support/functions.sh:
  Attempt to fix bug 117649

  16 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fixes for bugs 119009,119041 and 118985

  13 Jan 2006; Eric Edgar <rocket@gentoo.org>
  +examples/netboot2_template.spec, modules/catalyst_support.py,
  +modules/netboot2_target.py, +targets/netboot2/netboot2-controller.sh,
  +targets/netboot2/netboot2-copyfile.sh, +targets/netboot2/netboot2-pkg.sh,
  +targets/support/netboot2-final.sh, targets/support/pre-kmerge.sh:
  Add netboot2 target

  13 Jan 2006; Eric Edgar <rocket@gentoo.org> modules/generic_stage_target.py,
  targets/support/kmerge.sh:
  Fix for ccache (null)/.ccache bug

  13 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc14.

  11 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS, arch/ppc.py:
  Added ppc -mcpu patch from Pylon for bug #118709.

  10 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/embedded_target.py, modules/stage4_target.py:
  Added linuxrc to embedded and stage4 targets.

  10 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/support/kmerge.sh:
  filter kname - and . for kmerge.sh
  
  10 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/create-iso.sh:
  Added sparc64 to sparc lines for create-iso.sh to fix ISO creation on sparc64.

  05 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  change .digests to .DIGESTS

  04 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/kmerge.sh:
  Commented ccache for genkernel build which will resolve #117648 until a
  proper solution can be found. This is 2.0_rc13.

  04 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>